# communicatord

./: CMakeLists.txt  README.md  TODO.md
cmake/: CMakeLists.txt  CommunicatorConfig.cmake  CommunicatordConfig.cmake  SnapCommunicatorConfig.cmake
communicator/: CMakeLists.txt  communicator.cpp  communicator.h  communicator_connection.cpp  communicator_connection.h  exception.h  flags.cpp  flags.h  loadavg.cpp  loadavg.h  names.an  version.cpp  version.h.in
communicator/daemon/: base_connection.cpp  base_connection.h  communicatord.cpp  communicatord.h  gossip_connection.cpp  gossip_connection.h  interrupt.cpp  listener.cpp  ping.cpp  remote_communicators.cpp  remote_communicators.h  service_connection.cpp  service_connection.h  unix_connection.cpp  unix_connection.h  utils.cpp
communicatord/: CMakeLists.txt  communicator.cpp  communicator.h  communicatord.cpp  communicatord.h  exception.h  flags.cpp  flags.h  loadavg.cpp  loadavg.h  names.an  version.cpp  version.h.in
conf/: communicatord.conf  conf-README.md  confcommunicatord  flags.conf  sendmessage.conf  snapcommunicator.conf  snapcommunicatord.conf  ssl-README.md
conf/logger/: communicatord.conf  raise-flag.conf  snapcommunicator.conf  snapcommunicatord.conf
daemon/: CMakeLists.txt  base_connection.cpp  base_connection.h  cache.cpp  cache.h  communicatord.cpp  communicatord.h  exception.h  gossip_connection.cpp  gossip_connection.h  interrupt.cpp  interrupt.h  listener.cpp  listener.h  load_timer.cpp  load_timer.h  main.cpp  ping.cpp  ping.h  remote_communicators.cpp  remote_communicators.h  remote_connection.cpp  remote_connection.h  remote_snapcommunicators.cpp  remote_snapcommunicators.h  server.cpp  server.h  service_connection.cpp  service_connection.h  stable_clock.cpp  stable_clock.h  unix_connection.cpp  unix_connection.h  unix_listener.cpp  unix_listener.h  utils.cpp  utils.h
daemon/message-definitions/: ACCEPT.conf  BLOCK.conf  CLOCK_STABLE.conf  CLOCK_STATUS.conf  CLOCK_UNSTABLE.conf  CLUSTER_COMPLETE.conf  CLUSTER_DOWN.conf  CLUSTER_INCOMPLETE.conf  CLUSTER_STATUS.conf  CLUSTER_UP.conf  CMakeLists.txt  CONNECT.conf  DISCONNECT.conf  DISCONNECTED.conf  DISCONNECTING.conf  FORGET.conf  GOSSIP.conf  HANGUP.conf  IPLOCK_CURRENT_STATUS.conf  IPLOCK_GET_STATUS.conf  LISTEN_LOADAVG.conf  LIST_SERVICES.conf  LOADAVG.conf  NEW_REMOTE_CONNECTION.conf  PUBLIC_IP.conf  RECEIVED.conf  REFUSE.conf  REGISTER.conf  REGISTER_FOR_LOADAVG.conf  SERVER_PUBLIC_IP.conf  SERVICE_STATUS.conf  SHUTDOWN.conf  STATUS.conf  TRANSMISSION_REPORT.conf  UNREACHABLE.conf  UNREGISTER.conf  UNREGISTER_FROM_LOADAVG.conf
debian/: changelog  communicator-dev.install  communicator-doc.doc-base  communicator-doc.install  communicator.install  communicatord-dev.install  communicatord-doc.doc-base  communicatord-doc.install  communicatord.install  communicatord.logrotate  communicatord.postinst  communicatord.postrm  communicatord.preinst  communicatord.prerm  communicatord.service  communicatord.sysuser  communicatord.tmpfile  communicatord.tmpfiles  control  copyright  rules  snapcommunicator.install  snapcommunicatord-dev.install  snapcommunicatord.install  snapcommunicatord.postinst  snapcommunicatord.postrm
doc/: CMakeLists.txt  communicatord.doxy.in  inter-service.msc  messenger.msc  remote.msc
doc/man/: clusterstatus.1  snapclusterstatus.1
plugins/: CMakeLists.txt
plugins/communicatord_check_clock/: CMakeLists.txt  check_clock.cpp  check_clock.h  communicator-check-clock.ini  stable_clock.cpp  stable_clock.h
plugins/communicatord_loadavg/: CMakeLists.txt  load_timer.cpp  load_timer.h  loadavg.cpp  loadavg.h
plugins/communicatord_stable_clock/: CMakeLists.txt  stable_clock.cpp  stable_clock.h
snapcommunicator/: CMakeLists.txt  exception.h  loadavg.cpp  loadavg.h  snapcommunicator.cpp  snapcommunicator.h  version.cpp  version.h.in
tests/: CMakeLists.txt  catch_base_connection.cpp  catch_communicator.cpp  catch_communicatord.cpp  catch_main.cpp  catch_main.h  catch_version.cpp  start-for-dev.sh
tests/message-definitions/: DATA.conf
tests/rprtr/: communicator_server_test.rprtr  communicator_server_test_quitting.rprtr
tools/: CMakeLists.txt  cluster_status.cpp  clusterstatus.cpp  message.cpp  raise_flag.cpp  saveflag.cpp  snapclusterstatus.cpp  snapmessage.cpp  timedate-wait
